Remove unused umage | main.css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-98100710-3"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+
     gtag('js', new Date());
 
     gtag('config', 'UA-98100710-3');
@@ -14,12 +18,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-    html, body, h1, h2, h3, h4, h5, h6 {
-        font-family: "Roboto", sans-serif
-    }
-</style>
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+<link rel="stylesheet" href="src/css/main.css">
 <body class="w3-light-grey">
 
 <!-- Page Container -->
@@ -36,16 +36,21 @@
                     <img src="src/img/profile.jpg" style="width:100%" alt="Avatar">
                     <div class="w3-container w3-text-black">
                         <h2>Cesar Dutten</h2>
-                        <a href="https://www.facebook.com/duttenfotografia" target="_blank"><i
-                                class="fa fa-facebook-official w3-hover-opacity"></i> </a>
-                        <a href="https://www.instagram.com/cdutten/" target="_blank"><i
-                                class="fa fa-instagram w3-hover-opacity"></i></a>
-                        <a href="https://www.twitter.com/cdutten" target="_blank"><i
-                                class="fa fa-twitter w3-hover-opacity"></i></a>
-                        <a href="https://www.linkedin.com/in/cesar-dutten-543251120/" target="_blank"><i
-                                class="fa fa-linkedin w3-hover-opacity"></i></a>
-                        <a href="https://www.github.com/cdutten" target="_blank"><i
-                                class="fa fa-github w3-hover-opacity"></i></a>
+                        <a href="https://www.facebook.com/duttenfotografia" target="_blank">
+                            <i class="fab fa-facebook w3-hover-opacity"></i>
+                        </a>
+                        <a href="https://www.instagram.com/cdutten/" target="_blank">
+                            <i class="fab fa-instagram w3-hover-opacity"></i>
+                        </a>
+                        <a href="https://www.twitter.com/cdutten" target="_blank">
+                            <i class="fab fa-twitter w3-hover-opacity"></i>
+                        </a>
+                        <a href="https://www.linkedin.com/in/cesar-dutten-543251120/" target="_blank">
+                            <i class="fab fa-linkedin w3-hover-opacity"></i>
+                        </a>
+                        <a href="https://www.github.com/cdutten" target="_blank">
+                            <i class="fab fa-github w3-hover-opacity"></i>
+                        </a>
                     </div>
                 </div>
 
@@ -66,21 +71,22 @@
                 <h2 class="w3-text-grey w3-padding-16"><i
                         class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
                 <div class="w3-container">
-                    <h5 class="w3-opacity"><b>Site Reliability Engineer /<a href="https://www.extendeal.com"
-                                                                            target="_blank"> extendeal.com </a></b></h5>
+                    <h5 class="w3-opacity"><b>Site Reliability Engineer |
+                        <a href="https://www.extendeal.com" target="_blank"> extendeal.com </a></b></h5>
                     <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2015 - <span
                             class="w3-tag w3-teal w3-round">Current</span></h6>
                     <hr>
                 </div>
                 <div class="w3-container">
-                    <h5 class="w3-opacity"><b>Freelance Web Developer /<a href="https://www.mowi.io" target="_blank"> </a>
-                        mowi.io</b></h5>
+                    <h5 class="w3-opacity">
+                        <b>Freelance Web Developer | <a href="https://www.mowi.io" target="_blank">mowi.io</a></b>
+                    </h5>
                     <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2017 - Jul 2018
                     </h6>
                     <hr>
                 </div>
                 <div class="w3-container">
-                    <h5 class="w3-opacity"><b>Mentor voluntario/ Programá tu futuro (GCBA)</b></h5>
+                    <h5 class="w3-opacity"><b>Mentor voluntario| Programá tu futuro (GCBA)</b></h5>
                     <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2017 - Dec 2017
                     </h6>
                 </div>
@@ -89,7 +95,7 @@
 
             <div class="w3-container w3-card w3-white w3-margin-bottom">
                 <h2 class="w3-text-grey w3-padding-16"><i
-                        class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Courses</h2>
+                        class="fab fa-youtube fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Courses</h2>
                 <div class="w3-container">
                     <h4><b> <a href="https://www.pluralsight.com" target="_blank">Pluralsight</a></b></h4>
                     <p class="w3-opacity"><b>Getting Started with Docker by Nigel Poulton</b></p>
@@ -121,9 +127,9 @@
 
             <div class="w3-container w3-card w3-white">
                 <h2 class="w3-text-grey w3-padding-16"><i
-                        class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
+                        class="fas fa-university fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
                 <div class="w3-container">
-                    <h5 class="w3-opacity"><b>Universidad de Buenos Aires</b></h5>
+                    <h5 class="w3-opacity"><b>Informatic Engineer | Universidad de Buenos Aires</b></h5>
                     <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2013 - 2015</h6>
                     <p>Incomplete</p>
                     <hr>
@@ -148,8 +154,8 @@
     <p>@cdutten with a w3c template.</p>
 
 </footer>
-<script src="src/js/vendor/echarts.min.js"></script>
-<script src="src/js/vendor/echarts-wordcloud.min.js"></script>
+<script src="src/vendor/echarts.min.js"></script>
+<script src="src/vendor/echarts-wordcloud.min.js"></script>
 <script src="src/js/components/word-cloud-chart/techs.js"></script>
 <script src="src/js/components/word-cloud-chart/wordCloudChart.js"></script>
 <!--<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>-->
