--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 </div>
                 <div class="w3-container">
                     <h4><b> <a href="https://www.educacionit.com/" target="_blank">Educacion It</a></b></h4>
-                    <p class="w3-opacity"><b>Php - Programacion orientada a objetoso</b></p>
+                    <p class="w3-opacity"><b>Php - Programacion orientada a objetos</b></p>
                     <hr>
                 </div>
             </div>
